--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.1.2",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -18,15 +18,15 @@
     "expo-asset": "^8.10.1",
     "expo-file-system": "^15.4.2",
     "expo-splash-screen": "~0.20.4",
-    "expo-sqlite": "^11.3.2",
+    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.1.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
+    "react-native": "0.72.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
